# vittring

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.md  alembic.ini  design-system.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260505_0900_0001_initial_schema.py  20260505_2200_0002_saved_signals.py
deploy/: Caddyfile
deploy/logrotate/: vittring
deploy/sudoers/: vittring-systemctl
deploy/systemd/: vittring-api.service  vittring-scheduler.service
deploy/unattended-upgrades/: 50unattended-upgrades
docs/: architecture.md  data-sources.md  deployment.md  gdpr.md  runbook.md  ui-audit.md
docs/audit/: 01-security.md  02-auth-flows.md  03-dashboard-ux.md  04-admin-panel.md  05-forms.md  06-responsive.md  07-accessibility.md  08-copy.md  09-database.md  10-journey.md
scripts/: backup.sh  deploy.sh  restore.sh  server_bootstrap.sh  verify_dns.py
src/vittring/: __init__.py  config.py  db.py  logging.py  main.py
src/vittring/api/: account.py  admin.py  auth.py  billing.py  deps.py  health.py  public.py  subscriptions.py  templates.py  unsubscribe.py  webhooks.py
src/vittring/api/templates/: _layout.html.j2
src/vittring/api/templates/admin/: _layout.html.j2  audit.html.j2  email.html.j2  overview.html.j2  signals.html.j2  subscriptions.html.j2  system.html.j2  user_detail.html.j2  user_new.html.j2  users.html.j2
src/vittring/api/templates/app/: _app_shell.html.j2  _stub.html.j2  account.html.j2  calendar.html.j2  dashboard.html.j2  saved.html.j2  subscription_form.html.j2  subscriptions.html.j2
src/vittring/api/templates/auth/: 2fa_enable.html.j2  _auth_base.html.j2  check_email.html.j2  login.html.j2  password_reset_confirm.html.j2  password_reset_request.html.j2  signup.html.j2  verification_needed.html.j2  verify_failed.html.j2  verify_ok.html.j2
src/vittring/api/templates/public/: bot.html.j2  demo.html.j2  landing.html.j2  legal_cookies.html.j2  legal_dpa.html.j2  legal_privacy.html.j2  legal_terms.html.j2  pricing.html.j2  unsubscribe.html.j2
src/vittring/audit/: __init__.py  log.py
src/vittring/cli/: __main__.py
src/vittring/delivery/: __init__.py  domain_setup.py  email.py
src/vittring/delivery/templates/: README.md  _base.html.j2  digest.html.j2  digest.txt.j2  reset_password.html.j2  verify.html.j2  welcome.html.j2
src/vittring/ingest/: __init__.py  _http.py  _persist.py  base.py  bolagsverket.py  jobtech.py  ted.py
src/vittring/ingest/scrapers/: base.py  blocklist.py  eavrop.py  kommers.py  mercell.py  tendsign.py
src/vittring/jobs/: __init__.py  __main__.py  digest.py  gdpr.py  scheduler.py
src/vittring/matching/: __init__.py  criteria.py  engine.py
src/vittring/models/: __init__.py  audit.py  company.py  saved.py  signals.py  subscription.py  user.py
src/vittring/schemas/: ingest.py
src/vittring/security/: __init__.py  csrf.py  headers.py  passwords.py  ratelimit.py  tokens.py  totp.py
src/vittring/static/css/: brand.css  main.css  tokens.css
src/vittring/utils/: errors.py
tests/: conftest.py  test_matching.py
