[project]
name = "vittring"
version = "0.1.0"
description = "Open-data signal monitoring for Swedish staffing-company sales teams"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Karim Khalil" }]

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",
    "itsdangerous>=2.2",
    "jinja2>=3.1",

    # Validation / config
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",

    # HTTP client
    "httpx>=0.28",
    "tenacity>=9.0",

    # Auth / security
    "fastapi-users[sqlalchemy]>=14.0",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.2",
    "pyjwt>=2.10",
    "pyotp>=2.9",
    "qrcode[pil]>=8.0",

    # Email
    "resend>=2.5",

    # Payments (deferred but library present)
    "stripe>=11.4",

    # Observability
    "structlog>=24.4",
    "sentry-sdk[fastapi]>=2.18",

    # Scheduler
    "apscheduler>=3.10",
    "tzdata>=2024.2",

    # Utility
    "python-slugify>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "vcrpy>=6.0",
    "freezegun>=1.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-passlib>=1.7",
    "types-python-slugify>=8.0",
    "detect-secrets>=1.5",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vittring"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "TRY",  # tryceratops
    "ASYNC",
]
ignore = [
    "E501",   # line length handled by formatter
    "TRY003", # long messages in exceptions ok
    "S101",   # asserts ok in tests (per-file override below also)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S311"]
"alembic/versions/*.py" = ["N999", "E402", "I001"]
"alembic/env.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = [
    "factory.*",
    "vcr.*",
    "apscheduler.*",
    "passlib.*",
    "qrcode.*",
    "resend.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: integration tests requiring external services",
    "slow: slow-running tests",
]

[tool.coverage.run]
source = ["src/vittring"]
branch = true
omit = [
    "*/alembic/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
